--- a/Young.html
+++ b/Young.html
@@ -38,7 +38,7 @@
     			<button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown">Young People Games</button>
     			<ul class="dropdown-menu">
       				<li><a class="dropdown-item" href="game.html">Indoor Games Intro</a></li>
-      				<li><a class="dropdown-item" href="kids.html">Kids Games</a></li>
+      				<li><a class="dropdown-item" href="Kids.html">Kids Games</a></li>
       				<li><a class="dropdown-item" href="old.html">Old people Games</a></li>
       				<li><a class="dropdown-item" href="family.html">Family Games</a></li>
     			</ul>
